# testdata

./: LICENSE.txt  README.md  pyproject.toml  setup.py  test_testdata.py  testdata.py  testdata_test.py
docs/: TESTDATA_SERVER.md
testdata/: __init__.py  __main__.py  base.py  client.py  compat.py  config.py  data.py  email.py  environ.py  image.py  mock.py  mocking.py  output.py  path.py  server.py  service.py  test.py  threading.py  user.py  utils.py
testdata/data/: __init__.py  countries.py
testdata/data/usa/: __init__.py  cities.py  states.py  zipcodes.py
testdata/path/: __init__.py  base.py
testdata/types/: datetime.py  mapping.py  number.py  sequence.py  string.py
tests/: __init__.py  base_test.py  client_test.py  email_test.py  main_test.py  mock_test.py  mocking_test.py  output_test.py  path_test.py  server_test.py  service_test.py  test_test.py  testdata_test.py  threading_test.py  types_test.py  user_test.py
