[project]
requires-python = ">=3.10"
description = "Easily generate random unicode test data among other things"
authors = [
  { name = "Jay Marcyes", email = "jay@marcyes.com" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Plugins",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Testing",
  "Programming Language :: Python :: 3"
]
dependencies = [
  "datatypes"
]
name = "testdata"
dynamic = [
  "version"
]
readme = "README.md"
license = "MIT"
license-files = [
  "LICENSE.txt"
]

[project.urls]
Homepage = "https://github.com/Jaymon/testdata"
Repository = "https://github.com/Jaymon/testdata"

[build-system]
requires = [
  "setuptools>=62.3.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = [
  "tests*",
  "example*"
]
include = [
  "testdata*"
]
namespaces = true

[tool.setuptools.dynamic]
version = { attr = "testdata.__version__" }

[tool.setuptools.package-data]
"testdata.data" = [
  "**"
]

[project.scripts]
testdata = "testdata.__main__:application"

